// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles/Inset handles 0 value 1`] = `
{
  "classNames": [
    "--inset",
  ],
  "variables": {
    "--uic-inset-s": 0,
  },
}
`;

exports[`Styles/Inset handles positive value 1`] = `
{
  "classNames": [
    "--inset",
  ],
  "variables": {
    "--uic-inset-s": 4,
  },
}
`;

exports[`Styles/Inset handles responsive value 1`] = `
{
  "classNames": [
    "--inset",
    "--inset--m",
    "--inset--l",
  ],
  "variables": {
    "--uic-inset-l": 2,
    "--uic-inset-m": 0,
    "--uic-inset-s": 4,
  },
}
`;

exports[`Styles/Inset handles undefined value 1`] = `null`;

exports[`Styles/Inset handles value width defined side 1`] = `
{
  "classNames": [
    "--inset-start",
  ],
  "variables": {
    "--uic-inset-start-s": 4,
  },
}
`;
